@@ -15,7 +15,6 @@
     - false toast on local trends failed (no idea where this is coming from...)
     - trim failed toast on my phone, not tablet
     - switch mentions to save the position instead of current unread method
-    - can't re-search from the search page
     - duplicate followers and following with low numbers
 
 
