@@ -60,6 +60,30 @@ public class UserSearchFragment extends Fragment {
         this.searchQuery = "";
     }
 
+    private BroadcastReceiver newSearch = new BroadcastReceiver() {
+        @Override
+        public void onReceive(Context context, Intent intent) {
+            searchQuery = intent.getStringExtra("query");
+
+            doUserSearch(searchQuery);
+        }
+    };
+
+    @Override
+    public void onResume() {
+        super.onResume();
+
+        IntentFilter filter = new IntentFilter();
+        filter.addAction("com.klinker.android.twitter.NEW_SEARCH");
+        context.registerReceiver(newSearch, filter);
+    }
+
+    @Override
+    public void onPause() {
+        context.unregisterReceiver(newSearch);
+        super.onPause();
+    }
+
     @Override
     public void onAttach(Activity activity) {
         super.onAttach(activity);
