@@ -1,6 +1,7 @@
 <b>Version 2.4.6:</b><br/><br/>
+    &#8226; Fix re-searching<br/>
     &#8226; Changes to refresh on startup<br/>
-    &#8226; Better translations<br/>
+    &#8226; Better translation of tweets<br/>
     &#8226; Fix duplicate users while searching<br/>
     &#8226; Some changes for attaching pictures on KitKat<br/>
     &#8226; Open to the correct page when going to the timeline from a drawer activity<br/>
